--- a/package.json
+++ b/package.json
@@ -6,13 +6,21 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.16.9",
     "axios": "^0.21.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0",
+    "sweetalert2": "^11.0.20",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -27,6 +35,7 @@
       "react-app/jest"
     ]
   },
+  "proxy": "https://book.alitechbot.uz",
   "browserslist": {
     "production": [
       ">0.2%",
